src/Glimmr/wwwroot/css/glimmr.css
:root {
    --fg-primary: #181818;
    --fg-secondary: #212121;
    --bg-secondary: #cfcfcf;
    --bg-secondary-alpha: #cfcfcfab;    
    --bg-primary: #9f9f9f;
}

:root, body, .main, #mainContent, #cardRow {
    height: 100%;
}

#cardRow {
    top : 48px;
    position: relative;
    margin-left: 0!important;
    overflow-y: scroll;
}

@media (max-width: 576px) {
    .modeGroup {
        display: inline-block !important;
        text-align: center !important;
        margin: 0 auto;
    }
    .myNav > .myNav {
        text-align: center;
    }
    .modeGroup-lg {
        display: none !important;
    }
    .settingBtn-lg {
        display: none;
    }
    .settingBtn > .mainSettings {
        padding: 5px 16px !important;
    }

    div.card.container-fluid > div.card-body.row > div.col-12.settingsCol.pb-2.text-center.exp.col-md-6 {
        position: relative;
        width: revert;
    }
    
    #statDiv {
        margin: 5px auto !important;
        max-width: calc(100% - 128px);
        position: relative;
        font-size: 12px;
        text-align: center;
    }
    .ambientRow, #audioNav {
        justify-content: center!important;
        text-align: center!important;
    }
    
    #mainSettingsCard {
        padding: 0!important;
    }
}

@media (min-width: 576px) {
    .settingBtn-sm {
        display: none;
    }
    .modeGroup-lg {
        display: inline-block !important;
    }    
    #statDiv {
        position: relative;
        margin-left: 5px;
        padding-top: 5px;
    }    
}

#sLedWrap, #sectorWrap {
    width: 95%;
    position: relative;
    margin: 0 auto;
}

div.btn-clear.btn-lg.controlBtn {
    padding: 8px 16px !important;
    font-size: 18px;
    line-height: 1.3333333;
    border-radius: 6px;
}

.dropdown-divider {
    margin: 1.25rem 0;
}

.ambientRow {
    
}

div.btn-clear.closeBtn.closeBtn-sm, div.btn-clear.refreshBtn {
    padding: 5px 16px !important;
}
 

.main {
    width: 100%;
    height: 100%;
    overflow: hidden;
    top: 0;
    left: 0;
}

.devCard.min {
    width: 0!important;
    height: 0!important;
}

.devCard.min * {
    width: 100%!important;
    height: 100%!important;   
    opacity: 0!important;
    display: none;
}

.card {
    border-radius: 10px;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
}

.devCard {
    -webkit-transition: all 0.5s ease-in-out;
    -moz-transition: all 0.5s ease-in-out;
    -o-transition: all 0.5s ease-in-out;
    transition: all 0.5s ease-in-out;
    overflow: hidden;
}

.devCard * {
    -webkit-transition: all 0.25s ease-in-out 0.5s;
    -moz-transition: all 0.25s ease-in-out 0.5s;
    -o-transition: all 0.25s ease-in-out 0.5s;
    transition: all 0.75s ease-in-out;
}

.card:hover {
    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}



.card-1:hover {
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.card-title {
    display: block;
    text-overflow: ellipsis;
    word-wrap: break-word;
    overflow: hidden;
    max-height: 48px;
    line-height: 24px;
}

#mapCol {
    position: relative;
}

.tab-pane.fade.show.active {
    opacity: 100% !important;
}

.popover.right.in {
    width: 276px !important;
}


#sectorMap, #ledMap {
    background:url("../img/sectoring_screen.png");
    background-size: 100% 100%;;
}

.devCard {
    width: 18rem;
    height: 225px !important;
}

#footer {
    height: 3rem;
    background-color: rgb(171, 171, 171) !important;
    padding: 0;
    margin: 0;
}


.beamItem {
    border: 1px solid grey;
}


.fade:not(.show) {
    display: none;
}

.deviceIcon {
    max-height: 60px;
    cursor: pointer;
}

.form-check-input {
    position: absolute;
    margin-top: 6px;
    right: 20px;
}

.custom-control-input {
    position: relative !important;
    margin-left: 4px !important;
    width: 2rem !important;
    z-index: 1 !important;
    
}

.custom-control:not(.hue-switch), .custom-switch:not(.hue-switch) {
    padding-left: 15px;
}

.custom-switch.hue-switch {
    padding-left: 0 !important;
}


.header {
    position: absolute;
    z-index: 1;
    top: 23px;
    background: none !important;
}

body, .main, #mainNav, #footer {
    overflow: hidden !important;
}

@keyframes rotation {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(359deg);
    }
}

.rotate {
    animation: rotation 2s infinite linear;
}

.settingBtn, .enableBtn {
    width: 60px;
}

.headerCol {
    font-size: 26px;
    margin-bottom: 10px;
}

#dbForm {
    margin-left: -15px;
}

.highLed {
    background-color: red;
}

.highLed.firstLed {
    background-color: green;
}

#footer > .fixed-bottom {
    height: 3rem !important;
}

.ledRed {
    background-color: red;
}

.ledOrange {
    background-color: orange;
}

.ledYellow {
    background-color: yellow;
}

.ledGreen {
    background-color: green;
}

.ledBlue {
    background-color: blue;
}

.ledIndigo {
    background-color: indigo;
}

.ledViolet {
    background-color: violet;
}

.titleRow {
    height: 76px;
}

.titleCol {
    font-size: 22px;
    margin-bottom: 10px;
}

div.btn-clear:not(.btn-lg) {
    padding: 10px 16px !important;
    font-size: 18px;
    line-height: 1.3333333;
    border-radius: 6px;
}

div.card.container-fluid > div.card-body.row > .settingsCol {
    top: 20px;
}

div.card.container-fluid > div.card-body.row > .brightSlider {
    top: 92px;
    left: 0;
}

.btn-group>.btn.active {
    z-index: 0!important;
}


.btn-clear * {
    pointer-events: none;
}


area {
    display: block;
    cursor: pointer;
}

.center {
    text-align: center;
}

.sectorMap, .ledMap {
    text-align: center;
    color: white;
    text-shadow: black;
    font-size: 1vw;
}

.capModeBtn, .capModeBtn img {
    width: 75px;
    height: 75px;
    padding: 0;
    margin: 0;
}

.dragHandle {
    position: relative;
    left: -46%;
    top: 50px;
}

.beamItem {
    position: relative;
}
/* ... */

